--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "node-sass": "^4.10.0",
+    "popmotion": "^8.5.3",
     "vue": "^2.5.17",
+    "vue-carousel": "^0.16.0-rc2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -23,6 +26,7 @@
     "eslint-plugin-vue": "^5.0.0-0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
